--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -110,6 +110,9 @@ video {
     justify-content: space-between;
     margin-top: 3vh;
     margin-bottom: 5vh;
+    button{
+      font-size: 3vh;
+    }
   }
   .theme-button:active {
     transform: scale(0.9);
@@ -142,30 +145,28 @@ video {
 
   .content-readme {
     width: 60vw;
-    img {
-      max-width: 100%;
-    }
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 3vh;
     border-radius: 15px;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
     position: relative;
     backdrop-filter: blur(5px);
+    font-size:1.8vh;
+    img {
+     max-width: 100%;
+    } 
   }
 
   .menu button {
     padding: 5px;
     margin-bottom: 0.5vh;
     border: none;
-    height: 50px;
     color: var(--color);
     background: none;
     cursor: pointer;
-    font-size: 24px;
-    padding: 8px;
+    font-size: 3vh;
+    padding: 12px;
     transition: all 0.3s ease-out allow-discrete;
     border-radius: 15px;
   }
